force-app/main/default/objects/DC_Asset_History__c/DC_Asset_History__c.object-meta.xml
<CustomObject>
    <label>Asset History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>