force-app/main/default/objects/DC_Asset_History__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets History</relationshipLabel>
    <relationshipName>Assets_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>