force-app/main/default/objects/DC_Asset_History__c/fields/MRI_Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Lease_ID__c</fullName>
    <label>MRI Lease ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>