force-app/main/default/objects/DC_Asset_History__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Order</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Assets History</relationshipLabel>
    <relationshipName>Assets_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>