force-app/main/default/objects/DC_Asset_History__c/fields/Service_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Order Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets History</relationshipLabel>
    <relationshipName>Assets_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>