force-app/main/default/objects/DC_Asset_History__c/fields/Service_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Request Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Assets History</relationshipLabel>
    <relationshipName>Assets_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>