force-app/main/default/objects/DC_Asset_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>